{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 45,
  "lineage": "f743730e-63e3-49b0-67d3-22ae6977a094",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "idle_timeout_in_minutes": 10,
            "location": "eastus",
            "name": "nat-Gateway",
            "public_ip_address_ids": [
              "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPAddresses/nat-gateway-publicIP"
            ],
            "public_ip_prefix_ids": [
              "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPPrefixes/nat-gateway-publicIPPrefix"
            ],
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "resource_guid": "bc62dc52-6554-49f3-9324-95a21356b7f5",
            "sku_name": "Standard"
          },
          "dependencies": [
            "random_string.myrandom",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "ngw_ip_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway|/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPAddresses/nat-gateway-publicIP",
            "nat_gateway_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "public_ip_address_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPAddresses/nat-gateway-publicIP"
          },
          "dependencies": [
            "azurerm_nat_gateway.ngw",
            "azurerm_public_ip.ngw_ip",
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_prefix_association",
      "name": "ngw_ip_prefix_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway|/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPPrefixes/nat-gateway-publicIPPrefix",
            "nat_gateway_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "public_ip_prefix_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPPrefixes/nat-gateway-publicIPPrefix"
          },
          "dependencies": [
            "azurerm_public_ip_prefix.ngw_ip_prefix",
            "azurerm_resource_group.rg",
            "random_string.myrandom",
            "azurerm_nat_gateway.ngw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkInterfaces/devops-dev-web-linuxvm-nic",
            "internal_domain_name_suffix": "i32l3ld1bgqufjq0uby5rx2bih.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPAddresses/devops-dev-linuxvm-publicip",
                "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet"
              }
            ],
            "location": "eastus",
            "name": "devops-dev-web-linuxvm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "devops-dev-rg-fmrtuf"
          },
          "dependencies": [
            "azurerm_public_ip.web_linuxvm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg",
            "location": "eastus",
            "name": "devops-dev-vnet-appsubnet-nsg",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-8080",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-bastionsubnet-nsg",
            "location": "eastus",
            "name": "devops-dev-vnet-bastionsubnet-nsg",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3389",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-dbsubnet-nsg",
            "location": "eastus",
            "name": "devops-dev-vnet-dbsubnet-nsg",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-1433",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3306",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-5432",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-websubnet-nsg",
            "location": "eastus",
            "name": "devops-dev-vnet-websubnet-nsg",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "devops-dev-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "devops-dev-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "devops-dev-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "devops-dev-vnet-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "devops-dev-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "devops-dev-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "devops-dev-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.myrandom",
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "devops-dev-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.myrandom",
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "devops-dev-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "devops-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "devops-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "devops-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ngw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPAddresses/nat-gateway-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.152.242.253",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "nat-gateway-publicIP",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owners": "devops"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_linuxvm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/publicIPAddresses/devops-dev-linuxvm-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.120.55.3",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "devops-dev-linuxvm-publicip",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.11.0/24",
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-appsubnet",
            "name": "devops-dev-vnet-appsubnet",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "virtual_network_name": "devops-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.100.0/24",
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-bastionsubnet",
            "name": "devops-dev-vnet-bastionsubnet",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "virtual_network_name": "devops-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.21.0/24",
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-dbsubnet",
            "name": "devops-dev-vnet-dbsubnet",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "virtual_network_name": "devops-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet",
            "name": "devops-dev-vnet-websubnet",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "virtual_network_name": "devops-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "appsubnet_nat_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-appsubnet",
            "nat_gateway_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_nat_gateway.ngw",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "bastionsubnet_nat_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-bastionsubnet",
            "nat_gateway_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.ngw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "dbsubnet_nat_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-dbsubnet",
            "nat_gateway_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "random_string.myrandom",
            "azurerm_nat_gateway.ngw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "websubnet_nat_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet",
            "nat_gateway_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/natGateways/nat-Gateway",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.ngw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "random_string.myrandom",
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom",
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "acbe7847-097b-42a1-a61a-a071f8df8147",
            "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet",
            "location": "eastus",
            "name": "devops-dev-vnet",
            "resource_group_name": "devops-dev-rg-fmrtuf",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-websubnet",
                "name": "devops-dev-vnet-websubnet",
                "security_group": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-websubnet-nsg"
              },
              {
                "address_prefix": "10.1.100.0/24",
                "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-bastionsubnet",
                "name": "devops-dev-vnet-bastionsubnet",
                "security_group": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-bastionsubnet-nsg"
              },
              {
                "address_prefix": "10.1.11.0/24",
                "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-appsubnet",
                "name": "devops-dev-vnet-appsubnet",
                "security_group": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-appsubnet-nsg"
              },
              {
                "address_prefix": "10.1.21.0/24",
                "id": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/virtualNetworks/devops-dev-vnet/subnets/devops-dev-vnet-dbsubnet",
                "name": "devops-dev-vnet-dbsubnet",
                "security_group": "/subscriptions/e2cfb4d1-0f82-4e02-b479-bb7896e8d4be/resourceGroups/devops-dev-rg-fmrtuf/providers/Microsoft.Network/networkSecurityGroups/devops-dev-vnet-dbsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "devops"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}